syntax = "proto3";

// Email sender service
package emailpb.v1;

option go_package = "svc-email/emailpb/v1;emailpbv1";

// import "google/protobuf/timestamp.proto";
// import "google/protobuf/struct.proto";
// import "templ/v1/data.proto";
import "be/common/templ/v1/templ.proto";

message RawBody {
    string content_type = 1;
    string subject = 2;
    string body = 3;
}

message TemplateBody {
    string template_id = 1;
    templ.v1.Data data = 2 [json_name = "data"];
    // Data data = 2;
}

message EmailAddr {
    string name = 2;
    string email = 3;
}

message SenderAccount {
    string realm = 1;
    string name = 2;
    string email = 3;
}

message EmailMessage {
    SenderAccount from_account = 1;
    repeated EmailAddr to_email = 2;
    repeated EmailAddr cc_email = 3;
    repeated EmailAddr bcc_email = 4;
    oneof body {
        RawBody raw_body = 5;
        TemplateBody template_body = 6;
    }
}

message SendEmail {
    string id = 1;
    EmailMessage message = 2;
}